# todo

./: .gitignore  CNAME  README.md  app.js  backlog.md  commit_msg.txt  date-utils.js  datenschutz.html  development_roadmap.md  impressum.html  index.html  manifest.webmanifest  package-lock.json  package.json  roadmap  roadmap.md  service-worker.js  storage.js  styles.css  tailwind.config.js  todo.txt  vite.config.js
.github/workflows/: deploy.yml
dev-dist/: sw.js
public/: impressum.html  robots.txt
src/: App.jsx  index.css  main.jsx  parser.js  store.js  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BatchEditModal.jsx  BottomSearch.jsx  BulkActionsBar.jsx  CalendarPopup.jsx  Dashboard.jsx  Datenschutz.jsx  FAQ.jsx  FilterBar.jsx  Impressum.jsx  NoteEditor.jsx  PWAInstallPrompt.jsx  SettingsSidebar.jsx  Sidebar.jsx  TaskItem.jsx  TaskList.jsx
src/hooks/: useDropbox.js  useGoogleContacts.js  useGoogleDrive.js  useGoogleServices.js  useKeyboardShortcuts.js
src/services/: NoteService.js
src/utils/: dateAliases.js  searchParser.js  sortUtils.js
test/: storage.test.mjs
tests/: format-date.test.js
todo-parser/: Cargo.toml
todo-parser/src/: lib.rs
